--- a/css/navigation.css
+++ b/css/navigation.css
@@ -122,32 +122,11 @@
 /* Style the search box inside the navigation bar */
 .search {
     float: right;
-}
-
-.navbar input[type=submit] {
-    float: right;
+    padding: 14px 16px;
 }
 
 .navbar input[type=text] {
-    padding: 6px;
     border: none;
-    margin-top: 8px;
     box-sizing: border-box
 }
 
-
-
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-    .navbar input[type=text] {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0;
-        padding: 14px;
-    }
-    .navbar input[type=text] {
-        border: 1px solid #ccc;
-    }
-}
