--- a/css/style.css
+++ b/css/style.css
@@ -268,14 +268,11 @@ div.oldGallery {
     margin: 5% 0;
 }
 /*responsive styling of location page*/
-div#desktopLocation {
-    display: none;
-}
-div#mapGoogle {
+div#mobileLocation#mapGoogle {
     text-align: center;
     padding: 0;
 }
-div#mapGoogle iframe {
+div#mobileLocation#mapGoogle iframe {
     border: 0;
     width: 100%;
 }
